Tries to pass titles to recyclerView

--- a/app/src/main/res/layout/fragment_important.xml
+++ b/app/src/main/res/layout/fragment_important.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="viewModel"
+            type="com.george.fs_korinthias.ui.important.ImportantViewModel" />
 
     </data>
 
@@ -12,18 +15,27 @@
         android:layout_height="match_parent"
         tools:context=".ui.important.ImportantFragment">
 
-        <TextView
-            android:id="@+id/text_home"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/important_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:textAlignment="center"
-            android:textSize="20sp"
+            android:layout_height="match_parent"
+            android:clipToPadding="false"
+            android:padding="6dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintVertical_bias="0.257"
+            app:listData="@{viewModel.titleList}"
+            tools:listitem="@layout/card_important_list_item" />
+
+        <ImageView
+            android:id="@+id/status_image"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
