--- a/app/src/main/res/layout/card_important_list_item.xml
+++ b/app/src/main/res/layout/card_important_list_item.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+        <variable
+            name="title"
+            type="String" />
+    </data>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -34,6 +40,7 @@
                     android:layout_height="200dp"
                     android:layout_centerVertical="true"
                     android:padding="20dp"
+                    android:text="@{title}"
                     android:textColor="#fff"
                     android:textSize="48sp" />
 
