--- a/app/src/main/res/layout/card_important_list_item.xml
+++ b/app/src/main/res/layout/card_important_list_item.xml
@@ -43,27 +43,28 @@
                 android:id="@+id/textTitleImportant"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#E68C8B8B"
                 android:layout_alignParentBottom="true"
-                android:padding="20dp"
-                android:textAlignment="gravity"
+                android:background="#E68C8B8B"
                 android:gravity="center_vertical"
-                tools:text="oikonomiköa möetra stöhrijhw tvn farmakeöivn"
+                android:padding="20dp"
                 android:text="@{info.title}"
+                android:textAlignment="gravity"
                 android:textColor="#fff"
-                android:textSize="22sp" />
+                android:textSize="22sp"
+                tools:text="oikonomiköa möetra stöhrijhw tvn farmakeöivn" />
+
             <TextView
                 android:id="@+id/textDateImportant"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="4dp"
                 android:padding="4dp"
-                tools:text="oikonomiköa möetra stöhrijhw tvn farmakeöivn"
                 android:text="@{info.date}"
                 android:textColor="#fff"
-                android:layout_marginEnd="4dp"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                tools:text="oikonomiköa möetra stöhrijhw tvn farmakeöivn" />
 
         </RelativeLayout>
 
