--- a/app/src/main/res/layout/fragment_all_news.xml
+++ b/app/src/main/res/layout/fragment_all_news.xml
@@ -30,10 +30,9 @@
             android:id="@+id/status_image"
             android:layout_width="180dp"
             android:layout_height="180dp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:weatherApiStatus="@{viewModel.status}"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:weatherApiStatus="@{viewModel.status}" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
