--- a/app/src/main/res/layout/card_important_list_item.xml
+++ b/app/src/main/res/layout/card_important_list_item.xml
@@ -30,6 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="8dp"
+            android:transitionName="@string/transition_photo"
             android:scaleType="fitXY"
             app:weatherIconDisplay="@{info.image}"
             tools:src="@drawable/ic_news" />
