--- a/app/src/main/res/layout/card_important_list_item.xml
+++ b/app/src/main/res/layout/card_important_list_item.xml
@@ -32,7 +32,7 @@
             android:layout_marginStart="8dp"
             android:transitionName="@string/transition_photo"
             android:scaleType="fitXY"
-            app:weatherIconDisplay="@{info.image}"
+            app:newsIconDisplay="@{info.image}"
             tools:src="@drawable/ic_news" />
 
         <RelativeLayout
