--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -127,10 +127,19 @@
                 android:layout_height="@dimen/progressBar"
                 android:layout_gravity="center_horizontal"
                 android:indeterminate="true"
-                app:newsApiStatus="@{detailsViewModel.status}"
+                app:newsApiStatus="@{detailsViewModel.statusProgress}"
                 android:indeterminateTint="@color/colorPrimary"
                 android:indeterminateTintMode="src_atop"
                 android:visibility="gone" />
+
+            <!--<ImageView
+                android:id="@+id/status_image"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:weatherApiStatus="@{detailsViewModel.statusProgress}" />-->
 
             <androidx.core.widget.NestedScrollView
                 android:id="@+id/scrollViewPackage"
@@ -161,6 +170,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_margin="8dp"
+                                android:autoLink="web"
                                 android:textColor="#000"
                                 app:htmlToString="@{detailsViewModel.selectedText}"
                                 android:textSize="20sp"
