--- a/app/src/main/res/layout/fragment_important.xml
+++ b/app/src/main/res/layout/fragment_important.xml
@@ -28,11 +28,29 @@
 
         <ImageView
             android:id="@+id/status_image"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:weatherApiStatus="@{viewModel.status}" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:progressBackgroundTint="#fff"
+            android:progressTint="@color/colorPrimary"
+            android:indeterminateTint="@color/colorPrimary"
+            android:indeterminateTintMode="src_atop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:progressApiStatus="@{viewModel.status}"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/important_recycler_view"
+            app:layout_constraintVertical_bias="0.07" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
