--- a/app/src/main/res/layout/fragment_all_news.xml
+++ b/app/src/main/res/layout/fragment_all_news.xml
@@ -10,45 +10,37 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.important.ImportantFragment">
+
+        <ImageView
+            android:id="@+id/status_image"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            app:weatherApiStatus="@{viewModel.status}" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/all_news_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
             app:listData="@{viewModel.titleList}"
             tools:listitem="@layout/card_important_list_item" />
-
-        <ImageView
-            android:id="@+id/status_image"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            app:layout_constraintBottom_toBottomOf="@+id/all_news_recycler_view"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:weatherApiStatus="@{viewModel.status}" />
 
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="36dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminate="true"
             android:indeterminateTint="@color/colorPrimary"
             android:indeterminateTintMode="src_atop"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:progressApiStatus="@{viewModel.status}"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/all_news_recycler_view"
-            app:layout_constraintVertical_bias="0.07" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            app:progressApiStatus="@{viewModel.status}"/>
+    </RelativeLayout>
 </layout>
