Adds translation and Imageview for internet disconnection at details activity

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -169,6 +169,13 @@
                             android:textSize="18sp"
                             app:htmlToString="@{detailsViewModel.selectedText}" />
 
+                        <ImageView
+                            android:id="@+id/status_image"
+                            android:layout_width="80dp"
+                            android:layout_height="80dp"
+                            android:layout_gravity="center_horizontal"
+                            app:newsApiStatusImageViewDetails="@{detailsViewModel.statusProgress}" />
+
                     </LinearLayout>
 
 
