Creates 3rd fragment at bottom navigation for Efimeries

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -11,4 +11,9 @@
         android:icon="@drawable/ic_news"
         android:title="@string/title_dashboard_bottom" />
 
+    <item
+        android:id="@+id/navigation_notifications"
+        android:icon="@drawable/ic_pharmacy"
+        android:title="@string/title_efimeries" />
+
 </menu>
