--- a/app/src/main/res/layout/activity_efimeries_details.xml
+++ b/app/src/main/res/layout/activity_efimeries_details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="efimeriesViewModel"
             type="com.george.fs_korinthias.ui.efimeriesDetails.EfimeriesDetailsViewModel" />
@@ -25,16 +26,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
-                app:popupTheme="@style/AppTheme.PopupOverlay" >
+                app:popupTheme="@style/AppTheme.PopupOverlay">
 
-                <!--<ImageView
+
+                <ImageView
                     android:id="@+id/imageArrowBack"
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
+                    android:layout_width="28dp"
+                    android:layout_height="28dp"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:paddingStart="4dp"
                     android:paddingEnd="4dp"
-                    android:src="@drawable/ic_left_arrow_white" />-->
+                    android:src="@drawable/ic_left_arrow_white" />
+
+                <TextView
+                    android:id="@+id/textViewTitleEfimeriesDetails"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="26dp"
+                    android:textColor="#fff"
+                    android:textSize="24sp"
+                    tools:text="oikonomika"/>
             </androidx.appcompat.widget.Toolbar>
 
         </com.google.android.material.appbar.AppBarLayout>
@@ -45,7 +56,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="?android:attr/actionBarSize"
             tools:context=".ui.efimeries.EfimeriesFragment">
 
             <ImageView
@@ -71,20 +82,20 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="36dp"
                 android:indeterminate="true"
+                android:indeterminateTint="@color/colorPrimary"
+                android:indeterminateTintMode="src_atop"
                 android:progressBackgroundTint="#fff"
                 android:progressTint="@color/colorPrimary"
-                android:indeterminateTint="@color/colorPrimary"
-                android:visibility="gone"
-                android:indeterminateTintMode="src_atop" />
+                android:visibility="gone" />
         </RelativeLayout>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
+        <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@android:drawable/ic_dialog_email" />
+            app:srcCompat="@android:drawable/ic_dialog_email" />-->
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
