--- a/app/src/main/res/layout/card_efimeries_details.xml
+++ b/app/src/main/res/layout/card_efimeries_details.xml
@@ -23,7 +23,9 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="88dp">
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/textOnomaPerioxis"
@@ -32,9 +34,9 @@
                 android:textAlignment="gravity"
                 android:gravity="center_horizontal"
                 android:padding="4dp"
-                android:text="@{info.imerominia}"
+                app:efimeriesToString="@{info.imerominia}"
                 android:textColor="#000"
-                android:textSize="12sp"
+                android:textSize="18sp"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 tools:text="oikonomiköa" />
