--- a/app/src/main/res/layout/fragment_efimeries.xml
+++ b/app/src/main/res/layout/fragment_efimeries.xml
@@ -20,6 +20,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_centerHorizontal="true"
+            app:weatherApiStatus="@{viewModel.status}"
             android:layout_centerVertical="true" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -45,6 +46,7 @@
             android:progressTint="@color/colorPrimary"
             android:indeterminateTint="@color/colorPrimary"
             android:visibility="gone"
+            app:progressApiStatus="@{viewModel.status}"
             android:indeterminateTintMode="src_atop"/>
     </RelativeLayout>
 </layout>
