--- a/app/src/main/res/layout/activity_efimeries_details.xml
+++ b/app/src/main/res/layout/activity_efimeries_details.xml
@@ -56,6 +56,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="#E4E4E4"
             android:layout_marginTop="?android:attr/actionBarSize"
             tools:context=".ui.efimeries.EfimeriesFragment">
 
