--- a/app/src/main/res/layout/card_efimeries_main.xml
+++ b/app/src/main/res/layout/card_efimeries_main.xml
@@ -10,15 +10,16 @@
             type="com.george.fs_korinthias.MainEfimeries" />
     </data>
 
-
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="-2dp"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
-        app:cardElevation="4dp"
-        app:cardPreventCornerOverlap="false"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="1dp"
+        app:cardMaxElevation="1dp"
         app:cardUseCompatPadding="true">
 
         <RelativeLayout
@@ -29,18 +30,19 @@
                 android:id="@+id/textOnomaPerioxis"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAlignment="gravity"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
                 android:gravity="center_horizontal"
                 android:padding="4dp"
                 android:text="@{info.titlePerioxi}"
+                android:textAlignment="gravity"
                 android:textColor="#000"
                 android:textSize="28sp"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
                 tools:text="oikonomiköa" />
 
         </RelativeLayout>
 
     </androidx.cardview.widget.CardView>
+
 
 </layout>
