--- a/app/src/main/res/layout/card_important_list_item.xml
+++ b/app/src/main/res/layout/card_important_list_item.xml
@@ -20,9 +20,10 @@
         android:clickable="true"
         android:focusable="true"
         android:foreground="?android:attr/selectableItemBackground"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
         app:cardPreventCornerOverlap="false"
+        app:cardCornerRadius="4dp"
+        app:cardElevation="2dp"
+        app:cardMaxElevation="2dp"
         app:cardUseCompatPadding="true">
 
         <ImageView
