--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -24,64 +24,56 @@
             app:layout_constraintRight_toRightOf="parent"
             app:menu="@menu/bottom_nav_menu" />
 
+        <RelativeLayout
+            android:id="@+id/slidingLayout"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="#fff"
+            android:translationZ="2dp"
+            android:layout_margin="2dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent" >
+
+            <ImageView
+                android:id="@+id/imageButtonClose"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:foreground="?android:attr/selectableItemBackground"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="2dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="4dp"
+                android:padding="4dp"
+                android:layout_alignParentEnd="true"
+                android:src="@drawable/ic_close"/>
+            <View
+                android:id="@+id/dummyView"
+                android:layout_width="wrap_content"
+                android:layout_height="2dp"
+                android:layout_margin="4dp"
+                android:background="#ccc"
+                android:layout_below="@id/imageButtonClose"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="#000"
+                android:layout_margin="4dp"
+                android:text="@string/dummy_text"
+                android:layout_below="@id/dummyView"/>
+        </RelativeLayout>
 
         <fragment
             android:id="@+id/nav_host_fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginBottom="?attr/actionBarSize"
             app:defaultNavHost="true"
             app:layout_constraintBottom_toTopOf="@id/nav_view"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="?attr/actionBarSize"
             app:navGraph="@navigation/mobile_navigation" />
-
-        <RelativeLayout
-            android:id="@+id/slidingLayout"
-            android:layout_width="match_parent"
-            android:layout_height="400dp"
-            android:layout_margin="2dp"
-            android:background="@drawable/relativelayout_round_corners"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
-            android:translationZ="2dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent">
-
-            <ImageView
-                android:id="@+id/imageButtonClose"
-                android:layout_width="34dp"
-                android:layout_height="34dp"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="2dp"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:padding="8dp"
-                android:src="@drawable/ic_close" />
-
-            <View
-                android:id="@+id/dummyView"
-                android:layout_width="wrap_content"
-                android:layout_height="1dp"
-                android:layout_below="@id/imageButtonClose"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="4dp"
-                android:background="#ccc" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/dummyView"
-                android:layout_margin="4dp"
-                android:text="@string/dummy_text"
-                android:textColor="#000" />
-        </RelativeLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_message"
@@ -89,10 +81,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            android:layout_marginEnd="24dp"
-            android:layout_marginBottom="44dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintBottom_toTopOf="@id/nav_view"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="44dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/ic_message" />
 
