Solves fab button visibility issue and sliding scroll problem

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,6 +75,7 @@
                 android:background="#ccc" />
 
             <TextView
+                android:id="@+id/someDummyText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/dummyView"
