--- a/app/src/main/res/drawable/relativelayout_round_corners.xml
+++ b/app/src/main/res/drawable/relativelayout_round_corners.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="#FFFFFF"/>
     <stroke android:width="3dp" android:color="#fff" />
-    <corners android:radius="10dp"/>
+    <corners android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
 </shape>
