--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,51 +38,103 @@
             app:layout_constraintTop_toTopOf="parent"
             app:navGraph="@navigation/mobile_navigation" />
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/slidingLayout"
             android:layout_width="match_parent"
             android:layout_height="400dp"
-            android:layout_margin="2dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="?attr/actionBarSize"
             android:background="@drawable/relativelayout_round_corners"
             android:focusable="true"
             android:focusableInTouchMode="true"
+            android:orientation="vertical"
             android:translationZ="2dp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent">
 
-            <ImageView
-                android:id="@+id/imageButtonClose"
-                android:layout_width="34dp"
-                android:layout_height="34dp"
-                android:layout_alignParentEnd="true"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="2dp"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:padding="8dp"
-                android:src="@drawable/ic_close" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1">
 
-            <View
-                android:id="@+id/dummyView"
-                android:layout_width="wrap_content"
-                android:layout_height="1dp"
-                android:layout_below="@id/imageButtonClose"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginBottom="4dp"
-                android:background="#ccc" />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="44dp"
+                    android:layout_weight="9"
+                    android:gravity="center_horizontal"
+                    android:paddingTop="6dp"
+                    android:text="Number of messages"
+                    android:textAlignment="gravity" />
+
+                <ImageView
+                    android:id="@+id/imageButtonClose"
+                    android:layout_width="0dp"
+                    android:layout_height="34dp"
+                    android:layout_gravity="end"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_weight="1"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_close" />
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/someDummyText"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/dummyView"
+                android:layout_height="0dp"
                 android:layout_margin="4dp"
+                android:layout_weight="6"
                 android:text="@string/dummy_text"
                 android:textColor="#000" />
-        </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <View
+                    android:id="@+id/dummyView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginBottom="4dp"
+                    android:background="#ccc" />
+
+                <LinearLayout
+                    android:id="@+id/linearEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/editTextSlidingMainActivity"
+                        android:layout_width="0dp"
+                        android:layout_height="44dp"
+                        android:layout_weight="7"
+                        android:autofillHints="no"
+                        android:layout_margin="2dp"
+                        android:hint="@string/hint_editTextView_sliding_layout"
+                        android:inputType="" />
+
+                    <ImageView
+                        android:id="@+id/buttonSendMessage"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:padding="8dp"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:src="@drawable/ic_send_gray" />
+                </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_message"
