--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -24,43 +24,103 @@
             app:layout_constraintRight_toRightOf="parent"
             app:menu="@menu/bottom_nav_menu" />
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/slidingLayout"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:background="#fff"
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="56dp"
+            android:background="@drawable/relativelayout_round_corners"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:orientation="vertical"
             android:translationZ="2dp"
-            android:layout_margin="2dp"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent" >
+            app:layout_constraintBottom_toBottomOf="parent">
 
-            <ImageView
-                android:id="@+id/imageButtonClose"
-                android:layout_width="36dp"
-                android:layout_height="36dp"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="2dp"
-                android:layout_marginStart="4dp"
-                android:layout_marginEnd="4dp"
-                android:padding="4dp"
-                android:layout_alignParentEnd="true"
-                android:src="@drawable/ic_close"/>
-            <View
-                android:id="@+id/dummyView"
-                android:layout_width="wrap_content"
-                android:layout_height="2dp"
-                android:layout_margin="4dp"
-                android:background="#ccc"
-                android:layout_below="@id/imageButtonClose"/>
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textColor="#000"
+                android:layout_height="0dp"
+                android:layout_weight="1">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="44dp"
+                    android:layout_weight="9"
+                    android:gravity="center_horizontal"
+                    android:paddingTop="6dp"
+                    android:text="Number of messages"
+                    android:textAlignment="gravity" />
+
+                <ImageView
+                    android:id="@+id/imageButtonClose"
+                    android:layout_width="0dp"
+                    android:layout_height="34dp"
+                    android:layout_gravity="end"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_weight="1"
+                    android:foreground="?android:attr/selectableItemBackground"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_close" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/someDummyText"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_margin="4dp"
+                android:layout_weight="6"
                 android:text="@string/dummy_text"
-                android:layout_below="@id/dummyView"/>
-        </RelativeLayout>
+                android:textColor="#000" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <View
+                    android:id="@+id/dummyView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="1dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_marginBottom="4dp"
+                    android:background="#ccc" />
+
+                <LinearLayout
+                    android:id="@+id/linearEditText"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <EditText
+                        android:id="@+id/editTextSlidingMainActivity"
+                        android:layout_width="0dp"
+                        android:layout_height="44dp"
+                        android:layout_weight="7"
+                        android:autofillHints="no"
+                        android:layout_margin="2dp"
+                        android:hint="@string/hint_editTextView_sliding_layout"
+                        android:inputType="" />
+
+                    <ImageView
+                        android:id="@+id/buttonSendMessage"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center_vertical|center_horizontal"
+                        android:layout_weight="1"
+                        android:padding="8dp"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        android:src="@drawable/ic_send_green" />
+                </LinearLayout>
+            </LinearLayout>
+
+        </LinearLayout>
 
         <fragment
             android:id="@+id/nav_host_fragment"
