--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -130,7 +130,7 @@
                         android:layout_weight="1"
                         android:padding="8dp"
                         android:foreground="?android:attr/selectableItemBackground"
-                        android:src="@drawable/ic_send_green" />
+                        android:src="@drawable/ic_send_gray" />
                 </LinearLayout>
             </LinearLayout>
 
