Shows messages from Firebase and scrolls to last position

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,10 @@
 
     <data>
 
+        <variable
+            name="viewmodelXml"
+            type="com.george.fs_korinthias.MainActivityViewModel" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -64,7 +68,7 @@
                     android:layout_weight="9"
                     android:gravity="center_horizontal"
                     android:paddingTop="6dp"
-                    android:text="Number of messages"
+                    android:text="@{viewmodelXml.numberMessages.toString() + ` messages`}"
                     android:textAlignment="gravity" />
 
                 <ImageView
@@ -82,14 +86,14 @@
                     android:src="@drawable/ic_close" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/someDummyText"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerMainFireBaseMessages"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_margin="4dp"
-                android:layout_weight="6"
-                android:text="@string/dummy_text"
-                android:textColor="#000" />
+                android:layout_weight="7"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:listFireBaseMainMessages="@{viewmodelXml.titleMessages}"
+                tools:listitem="@layout/firebase_main_activity_list_item" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -116,9 +120,9 @@
                         android:id="@+id/editTextSlidingMainActivity"
                         android:layout_width="0dp"
                         android:layout_height="44dp"
+                        android:layout_margin="2dp"
                         android:layout_weight="7"
                         android:autofillHints="no"
-                        android:layout_margin="2dp"
                         android:hint="@string/hint_editTextView_sliding_layout"
                         android:inputType="" />
 
@@ -128,8 +132,8 @@
                         android:layout_height="40dp"
                         android:layout_gravity="center_vertical|center_horizontal"
                         android:layout_weight="1"
-                        android:padding="8dp"
                         android:foreground="?android:attr/selectableItemBackground"
+                        android:padding="8dp"
                         android:src="@drawable/ic_send_gray" />
                 </LinearLayout>
             </LinearLayout>
