--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -59,16 +59,15 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
+                android:layout_height="34dp">
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_height="44dp"
+                    android:layout_height="34dp"
                     android:layout_weight="9"
                     android:gravity="center_horizontal"
                     android:paddingTop="6dp"
-                    android:text="@{viewmodelXml.numberMessages.toString() + ` messages`}"
+                    app:numberMessagesToString="@{viewmodelXml.numberMessages.toString()}"
                     android:textAlignment="gravity" />
 
                 <ImageView
@@ -106,9 +105,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="1dp"
                     android:layout_marginStart="4dp"
-                    android:layout_marginTop="2dp"
                     android:layout_marginEnd="4dp"
-                    android:layout_marginBottom="4dp"
                     android:background="#ccc" />
 
                 <LinearLayout
@@ -148,6 +145,7 @@
             android:layout_margin="@dimen/fab_margin"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="44dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintBottom_toTopOf="@id/nav_view"
             app:layout_constraintEnd_toEndOf="parent"
