--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -59,12 +59,11 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
+                android:layout_height="34dp">
 
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_height="44dp"
+                    android:layout_height="34dp"
                     android:layout_weight="9"
                     android:gravity="center_horizontal"
                     android:paddingTop="6dp"
@@ -90,7 +89,7 @@
                 android:id="@+id/recyclerMainFireBaseMessages"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="6"
+                android:layout_weight="7"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:listFireBaseMainMessages="@{viewmodelXml.titleMessages}"
                 tools:listitem="@layout/firebase_main_activity_list_item" />
@@ -106,9 +105,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="1dp"
                     android:layout_marginStart="4dp"
-                    android:layout_marginTop="2dp"
                     android:layout_marginEnd="4dp"
-                    android:layout_marginBottom="4dp"
                     android:background="#ccc" />
 
                 <LinearLayout
@@ -151,6 +148,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintBottom_toTopOf="@id/nav_view"
             app:layout_constraintEnd_toEndOf="parent"
+            android:visibility="gone"
             app:srcCompat="@drawable/ic_message" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
